--- a/css/styles.css
+++ b/css/styles.css
@@ -112,3 +112,42 @@ footer ul {
 footer ul li {
   margin: 0.3rem 0;
 }
+
+
+/*Barra de navegación*/
+/* Header */
+header {
+  background-color: #8c6239;
+  color: white;
+  text-align: center;
+  padding: 1rem 0;
+}
+
+/* Menú de navegación */
+nav {
+  background-color: #b57f50;
+}
+
+nav ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  margin: 0;
+}
+
+nav ul li a {
+  display: block;
+  padding: 1rem 1.5rem;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+nav ul li a:hover {
+  background-color: #8c6239;
+}
